Se actualizo y soluciono la forma en que se actualizaba guardaba los movimientos segun debito y credito para enparejar la metodologia de guardado en la base de datos de los debitos manuales, con los recurrentes